--- a/MLRF/tp4/practice_04-01_BoVW.ipynb
+++ b/MLRF/tp4/practice_04-01_BoVW.ipynb
@@ -1278,7 +1278,7 @@
    ],
    "source": [
     "# TODO sample some images -- F\n",
-    "sample_image_ids = np.random.choice(len(IMG_IDS), size=200, replace=False)\n",
+    "sample_image_ids = np.random.choice(len(IMG_IDS), size=100, replace=False)\n",
     "print(sample_image_ids[:3])\n",
     "sample_images = [siftgeo_read_full(IMG_NAMES_FULL[im]) for im in sample_image_ids]\n",
     "# print(sample_images[0])"
@@ -2285,13 +2285,7 @@
       "Indexing 90544\n",
       "Indexing 90545\n",
       "Indexing 90546\n",
-      "Indexing 90547\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Indexing 90547\n",
       "Indexing 90548\n",
       "Indexing 90549\n",
       "Indexing 90550\n",
@@ -2838,13 +2832,7 @@
       "Indexing 91090\n",
       "Indexing 91091\n",
       "Indexing 91092\n",
-      "Indexing 91093\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Indexing 91093\n",
       "Indexing 91094\n",
       "Indexing 91095\n",
       "Indexing 91096\n",
@@ -7316,16 +7304,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\r\n",
-      " \"91401\": [\r\n",
-      "  \"90687\",\r\n",
-      "  \"90567\",\r\n",
-      "  \"90810\",\r\n",
-      "  \"90641\",\r\n",
-      "  \"91082\",\r\n",
-      "  \"90990\",\r\n",
-      "  \"90276\",\r\n",
-      "  \"90793\"\r\n"
+      "{\n",
+      " \"91401\": [\n",
+      "  \"90687\",\n",
+      "  \"90567\",\n",
+      "  \"90810\",\n",
+      "  \"90641\",\n",
+      "  \"91082\",\n",
+      "  \"90990\",\n",
+      "  \"90276\",\n",
+      "  \"90793\"\n"
      ]
     }
    ],
